--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index",
+    "start:prod": "node index",
     "test": ""
   },
   "keywords": [],
